                    Apache Solr - DataImportHandler
                            Release Notes

Introduction
------------
DataImportHandler is a data import tool for Solr which makes importing data from Databases, XML files and
HTTP data sources quick and easy.


$Id$
==================  4.0.0-dev ==============

(No Changes)

==================  3.3.0-dev ==============

(No Changes)

==================  3.2.0 ==================

(No Changes)

==================  3.1.0 ==================
Upgrading from Solr 1.4
----------------------

Versions of Major Components
---------------------

Detailed Change List
----------------------

New Features
----------------------

* SOLR-1525 : allow DIH to refer to core properties (noble)

* SOLR-1547 : TemplateTransformer copy objects more intelligently when there when the template is a single variable (noble)

* SOLR-1627 : VariableResolver should be fetched just in time (noble)

* SOLR-1583 : Create DataSources that return InputStream (noble)

* SOLR-1358 : Integration of Tika and DataImportHandler ( Akshay Ukey, noble)

* SOLR-1654 : TikaEntityProcessor example added DIHExample (Akshay Ukey via noble)

* SOLR-1678 :  Move onError handling to DIH framework (noble)

* SOLR-1352 : Multi-threaded implementation of DIH (noble)

* SOLR-1721 : Add explicit option to run DataImportHandler in synchronous mode (Alexey Serba via noble)

* SOLR-1737 : Added FieldStreamDataSource (noble)

Optimizations
----------------------

* SOLR-2200: Improve the performance of DataImportHandler for large delta-import
  updates. (Mark Waddle via rmuir)
  
Bug Fixes
----------------------
* SOLR-1638: Fixed NullPointerException during import if uniqueKey is not specified
  in schema (Akshay Ukey via shalin)

* SOLR-1639: Fixed misleading error message when dataimport.properties is not writable (shalin)

* SOLR-1598: Reader used in PlainTextEntityProcessor is not explicitly closed (Sascha Szott via noble)
